tests/negative/DuplicateInductiveParameterName.juvix
module DuplicateInductiveParameterName;

type T (A : Type) (B : Type) (A : Type) := c : T A B A;

end;